--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,8 +12,8 @@ secret.key=${APP_SECRET_KEY}
 
 #STRIPE
 stripe.secret.key=${STRIPE_SECRET_KEY}
-app.redirect.success=http://localhost:3000/payment/success/
-app.redirect.fail=http://localhost:3000/payment/fail
+app.redirect.success=https://book-market-place.vercel.app/payment/success/
+app.redirect.fail=https://book-market-place.vercel.app/payment/fail
 stripe.signing.key=${STRIPE_SIGNING_KEY}
 
 
