--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 server.port=${SERVER_PORT}
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.username= ${DB_USERNAME}
 spring.datasource.url=jdbc:${DB_DATASOURCE_URL}
