--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 server.port=${SERVER_PORT}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.username= ${DB_USERNAME}
-spring.datasource.url=jdbc:${DB_DATASOURCE_URL}
+spring.datasource.url=jdbc:${DB_DATASOURCE_URL}?preparedStatementCacheQueries=256
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.hikari.data-source-properties.cachePrepStmts=false
