--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,10 @@
 server.port=${SERVER_PORT}
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.username= ${DB_USERNAME}
 spring.datasource.url=jdbc:${DB_DATASOURCE_URL}?preparedStatementCacheQueries=256
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.hikari.data-source-properties.cachePrepStmts=false
-spring.datasource.hikari.data-source-properties.prepStmtCacheSize=0
-spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=0
 
 secret.key=${APP_SECRET_KEY}
 
