--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ server.port=${SERVER_PORT}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.username= ${DB_USERNAME}
-spring.datasource.url=jdbc:${DB_DATASOURCE_URL}?preparedStatementCacheQueries=256
+spring.datasource.url=jdbc:${DB_DATASOURCE_URL}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
